[project]
name = "learning-jax"
description = "Learning JAX"
dynamic = ["version"]
authors = [{ name = "Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.6",
    "flax>=0.6.7",
    "optax>=0.1.4",
    "scikit-learn>=1.2.2",
    "matplotlib>=3.7.1",
    "pillow>=9.4.0",
]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { source = "file", path = "src/app/__init__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.257",
    "pyright>=1.1.299",
    "ipykernel>=6.21.3",
]

[tool.pdm.scripts]
black = "black ."
pyright = "pyright ."
ruff_lint = "ruff ."
ruff_fix = "ruff --fix-only ."
format = { composite = ["ruff_fix", "black"] }
lint = { composite = ["ruff_lint", "pyright"] }
check = { composite = ["format", "lint", "test"] }


[tool.black]
target-version = ["py310"]

[tool.ruff]
select = ["E", "F", "W"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyright]
pythonVersion = "3.10"
